Imprint: issue #48 , Layout issues

--- a/src/app/styles/content.scss
+++ b/src/app/styles/content.scss
@@ -11,17 +11,18 @@
     @include fontBold;
   }
 
+
   // Links
   p, table {
-    @include contentLinks;
+    @include contentLightLinks;
     hyphens: auto;
   }
   h1, h2, h3, h4, h5 {
-    @include contentLinks;
+    @include contentLightLinks;
     @include fontBold;
   }
   h1, h2, h3, h4, h5 {
-    @include contentLinks;
+    @include contentLightLinks;
     @include fontBold;
     line-height: $fontLineHeightBase - 20%;
     margin-bottom:1em;
@@ -30,11 +31,16 @@
   }
   h2, h3 {
     font-size:$fontSizeBase * 1.5;
-    margin-bottom:1.2em;
-    margin-top:3em;
+    margin-bottom:0.5rem;
+    margin-top:2rem;
   }
   h1 {
     margin-top:5rem;
+  }
+
+  h2 {
+    margin-bottom:0rem;
+    margin-top:3rem;
   }
 
   h3 {
