--- a/src/app/styles/layout-medium.scss
+++ b/src/app/styles/layout-medium.scss
@@ -20,6 +20,17 @@
 }
 // end glossary
 
+// start imprint
+.contentimpressum {
+  .section, .partner-logo {
+    .section-item, .logo-item {
+      width:100% !important;
+      padding-right:10px !important;
+    }
+  }
+}
+// end imprint
+
 
 
  } // END Medium Layout
