--- a/src/app/styles/layout-small.scss
+++ b/src/app/styles/layout-small.scss
@@ -25,7 +25,7 @@
   // history
   .history-item {
     .logo-gemeinde {
-      
+
       width:28px !important;
     }
   }
@@ -42,6 +42,17 @@
     }
   }
   // end glossary
+
+  // start imprint
+  .contentimpressum {
+    .section, .partner-logo {
+      .section-item, .logo-item {
+        width:100% !important;
+        padding-right:10px !important;
+      }
+    }
+  }
+  // end imprint
 
 
  } // END Medium Layout
